# stalker

./: .gitignore  docker-compose.yml  pyproject.toml
stalker/: main.py  parser.py  scraper.py
stalker/src/: db.py  notifier.py  parser.py
stalker/src/models/: wallet.py
