[project]
name = "stalker"
version = "0.1.0"
description = ""
authors = [
    {name = "Azalurg",email = "91213389+Azalurg@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

